searchInput positioned on bottom

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,9 @@
                             <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Profile</a>
                         </li>
                     </ul>
-                    <input type="text" class="form-control" placeholder="Procure Alguem">
+                </div>
+                <div class="bottom-align-text container-fluid">
+                  <input type="text" class="form-control" placeholder="Procure Alguem">
                 </div>
             </div>
             <div class="col-md-9 cor2">
