--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
                 </div>
                 <div class="bottom-align-text container-fluid">
-                  <input id="inputSearchUser" type="text" class="form-control" placeholder="Procure Alguem">
+                  <input id="inputSearchUser" onkeyup="filterUserList()" type="text" class="form-control" placeholder="Procure Alguem">
                 </div>
             </div>
             <div class="col-md-9 cor2">
