--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-md-3 cor1">
                 <div class="list-group scrollList pseudoUl" id="userList" role="tablist">
-                    <a class="pseudoLi list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Home</a>
+                    <a onclick="updateScrollToBottom()" class="pseudoLi list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Home</a>
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Profile</a>
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Messages</a>
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
@@ -31,11 +31,25 @@
                 </div>
             </div>
             <div class="col-md-9 cor2">
-                <div class="tab-content" id="nav-tabContent">
-                    <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">1</div>
-                    <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">2</div>
-                    <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">3</div>
-                    <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">4</div>
+                <div id="divMessagesBox" class="cor3 scrollList">
+                    <div class="tab-content container" id="nav-tabContent">
+                        <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+                            <p>1</p>
+                            <p>1</p>
+                        </div>
+                        <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
+                            2
+                        </div>
+                        <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
+                            3
+                        </div>
+                        <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
+                            4
+                        </div>
+                    </div>
+                </div>
+                <div class="bottom-align-text container-fluid">
+                    <input id="inputWriteMessage" type="text" class="form-control" placeholder="Digite sua mensagem">
                 </div>
             </div>
         </div>
