scroll at bottom on progress...

--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
         <div class="row">
             <div class="col-md-3 cor1">
                 <div class="list-group scrollList pseudoUl" id="userList" role="tablist">
-                    <a onclick="updateScrollToBottom()" class="pseudoLi list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Home</a>
-                    <a class="pseudoLi list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Profile</a>
-                    <a class="pseudoLi list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Messages</a>
-                    <a class="pseudoLi list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
+                    <a onclick="updateScrollToBottom()" class="pseudoLi list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home" data-name="home">Home</a>
+                    <a class="pseudoLi list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile" data-name="profile">Profile</a>
+                    <a class="pseudoLi list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" data-name="messages">Messages</a>
+                    <a class="pseudoLi list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings" data-name="settings">Settings</a>
                 </div>
                 <div class="bottom-align-text container-fluid">
                   <input id="inputSearchUser" onkeyup="filterUserList()" type="text" class="form-control" placeholder="Procure Alguem">
@@ -36,9 +36,39 @@
                         <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
                             <p>1</p>
                             <p>1</p>
+                            <p>1</p>
+                            <p>1</p>
+                            <p>1</p>
+                            <p>1</p>
+                            <p>1</p>
+                            <p>1</p>
+                            <p>1</p>
+                            <p>1</p>
+                            <p>1</p>
+                            <p>1</p>
+                            <p>1</p>
+                            <p>1</p>
+                            <p>1</p>
+                            <p>1</p>
+                            <p>1</p>
+                            <p>1</p>
                         </div>
                         <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
-                            2
+                            <p>2</p>
+                            <p>2</p>
+                            <p>2</p>
+                            <p>2</p>
+                            <p>2</p>
+                            <p>2</p>
+                            <p>2</p>
+                            <p>2</p>
+                            <p>2</p>
+                            <p>2</p>
+                            <p>2</p>
+                            <p>2</p>
+                            <p>2</p>
+                            <p>2</p>
+                            <p>2</p>
                         </div>
                         <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
                             3
