--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-md-3 cor1">
                 <div class="list-group scrollList pseudoUl" id="userList" role="tablist">
-                    <a onclick="updateScrollToBottom()" class="pseudoLi list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home" data-name="home">Home</a>
+                    <a class="pseudoLi list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home" data-name="home">Home</a>
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile" data-name="profile">Profile</a>
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" data-name="messages">Messages</a>
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings" data-name="settings">Settings</a>
@@ -35,39 +35,8 @@
                     <div class="tab-content container" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
                             <p>1</p>
-                            <p>1</p>
-                            <p>1</p>
-                            <p>1</p>
-                            <p>1</p>
-                            <p>1</p>
-                            <p>1</p>
-                            <p>1</p>
-                            <p>1</p>
-                            <p>1</p>
-                            <p>1</p>
-                            <p>1</p>
-                            <p>1</p>
-                            <p>1</p>
-                            <p>1</p>
-                            <p>1</p>
-                            <p>1</p>
-                            <p>1</p>
                         </div>
                         <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
-                            <p>2</p>
-                            <p>2</p>
-                            <p>2</p>
-                            <p>2</p>
-                            <p>2</p>
-                            <p>2</p>
-                            <p>2</p>
-                            <p>2</p>
-                            <p>2</p>
-                            <p>2</p>
-                            <p>2</p>
-                            <p>2</p>
-                            <p>2</p>
-                            <p>2</p>
                             <p>2</p>
                         </div>
                         <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
@@ -79,7 +48,16 @@
                     </div>
                 </div>
                 <div class="bottom-align-text container-fluid">
-                    <input id="inputWriteMessage" type="text" class="form-control" placeholder="Digite sua mensagem">
+                    <form action="" class="formSendMsg">
+                        <div class="form-row">
+                            <div class="col-md-11">
+                                <input class="form-control" id="inputWriteMessage" type="text" placeholder="Digite sua mensagem">
+                            </div>
+                            <div class="col-md-1">
+                                <input class="form-control" type="submit" value="Go">
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
