improving logic performance

--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3 cor1">
-                <div class="list-group scrollList pseudoUl" id="userList" role="tablist">
+                <div class="list-group scrollList scrollList_usersOnline pseudoUl" id="userList" role="tablist">
                     <a class="pseudoLi list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home" data-name="home">Home</a>
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile" data-name="profile">Profile</a>
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" data-name="messages">Messages</a>
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings" data-name="settings">Settings</a>
                 </div>
                 <div class="bottom-align-text container-fluid">
-                  <input id="inputSearchUser" onkeyup="filterUserList()" type="text" class="form-control" placeholder="Procure Alguem">
+                  <input id="inputSearchUser" onkeyup="filterUserList_html()" type="text" class="form-control" placeholder="Procure Alguem">
                 </div>
             </div>
             <div class="col-md-9 cor2">
