--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,8 @@
         <div class="row">
             <div class="col-md-3 cor1">
                 <div class="list-group scrollList scrollList_usersOnline pseudoUl" id="userList" role="tablist">
-                    <a class="pseudoLi list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home" data-name="home">Home</a>
+                    <a class="pseudoLi list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-global" role="tab" aria-controls="global" data-name="global">Global</a>
+                    <a class="pseudoLi list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home" data-name="home">Home</a>
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile" data-name="profile">Profile</a>
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" data-name="messages">Messages</a>
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings" data-name="settings">Settings</a>
@@ -33,7 +34,10 @@
             <div class="col-md-9 cor2">
                 <div id="divMessagesBox" class="cor3 scrollList">
                     <div class="tab-content container" id="nav-tabContent">
-                        <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+                        <div class="tab-pane fade show active" id="list-global" role="tabpanel" aria-labelledby="list-global-list">
+                            <p>Global</p>
+                        </div>
+                        <div class="tab-pane fade" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
                             <p>1</p>
                         </div>
                         <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
