--- a/public/index.html
+++ b/public/index.html
@@ -82,3 +82,23 @@
     </div>
 </body>
 </html>
+
+
+<div id="myModal" class="modal fade" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Escreva seu nick</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <input id="nickname" class="form-control" type="text" placeholder="Nickname">
+            </div>
+            <div class="modal-footer">
+                <button id="btnModalNickname" type="button" class="btn btn-primary" data-dismiss="modal">Salvar</button>
+            </div>
+        </div>
+    </div>
+</div>
