--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,7 @@
                     <a class="pseudoLi list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-global" role="tab" aria-controls="global" data-name="global">Global</a>
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home" data-name="home">Home</a>
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile" data-name="profile">Profile</a>
-                    <a class="pseudoLi list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" data-name="messages">Messages</a>
-                    <a class="pseudoLi list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings" data-name="settings">Settings</a>
-                </div>
+                    <a class="pseudoLi list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" data-name="messages">Messages</a>                </div>
                 <div class="bottom-align-text container-fluid">
                   <input id="inputSearchUser" onkeyup="filterUserList_html()" type="text" class="form-control" placeholder="Procure Alguem">
                 </div>
@@ -36,7 +34,7 @@
                 <div id="divMessagesBox" class="cor3 scrollList">
                     <div class="tab-content container" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="list-global" role="tabpanel" aria-labelledby="list-global-list">
-                            <p>Global</p>
+                            <p data-name="teste">Global</p>
                         </div>
                         <div class="tab-pane fade" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
                             <p>1</p>
@@ -59,9 +57,6 @@
                         </div>
                         <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
                             3
-                        </div>
-                        <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
-                            4
                         </div>
                     </div>
                 </div>
