--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
                     <a class="pseudoLi list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-global" role="tab" aria-controls="global" data-name="global">Global</a>
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home" data-name="home">Home</a>
                     <a class="pseudoLi list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile" data-name="profile">Profile</a>
-                    <a class="pseudoLi list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" data-name="messages">Messages</a>                </div>
+                    <a class="pseudoLi list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" data-name="messages">Messages</a>              
+                </div>
                 <div class="bottom-align-text container-fluid">
                   <input id="inputSearchUser" onkeyup="filterUserList_html()" type="text" class="form-control" placeholder="Procure Alguem">
                 </div>
